--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,21 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <distributionManagement>
+        <repository>
+            <uniqueVersion>false</uniqueVersion>
+            <id>corp1</id>
+            <name>Corporate Repository</name>
+            <url>https://git.pg.edu.pl/pggit_oidc9162511/lsa-project.git</url>
+            <layout>default</layout>
+        </repository>
+        <snapshotRepository>
+            <uniqueVersion>true</uniqueVersion>
+            <id>propSnap</id>
+            <name>Propellors Snapshots</name>
+            <url>https://git.pg.edu.pl/pggit_oidc9162511/lsa-project.git</url>
+            <layout>legacy</layout>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
