Finalizing CI/CD workflow with test execution

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,8 @@ validate-project:
 run-unit-tests:
   stage: test
   script:
-    - 'mvn $MAVEN_CLI_OPTS -Dmaven.main.skip=true test'
+    #- 'mvn $MAVEN_CLI_OPTS -Dmaven.main.skip=true test'
+    - 'mvn $MAVEN_CLI_OPTS -X test'
 
 build-dist:
   stage: package
