Migrating application to JAVA EE, basic configuration done, begin development.

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>pg.gda.edu.lsea</groupId>
     <artifactId>ballers</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>ballers</name>
+    <packaging>war</packaging>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
@@ -34,6 +36,12 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>6.1.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -77,6 +85,14 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.4.0</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
